# ai-numery

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
gui/: Cargo.toml
gui/src/: canvas.rs  components.rs  consts.rs  gui.rs  lib.rs  main.rs
kohonen/: Cargo.toml
kohonen/src/: consts.rs  kohonen.rs  lib.rs
