[package]
name = "gui"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "guesser"
path = "src/main.rs"

[dependencies]
eframe = "0.17.0"
ndarray = "0.15.4"

kohonen = { path = "../kohonen", features = ["persist"] }
