[package]
name = "kohonen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"

anyhow = { version = "1.0.56", optional = true }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }

[features]
default = ["std"]
std = []
persist = ["anyhow", "serde", "serde_json", "ndarray/serde"]
